Final (eu espero)

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+			<!-- Dependência essencial para aplicações web com Spring Boot -->
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+			</dependency>
+
+
+
 	</dependencies>
 
 	<build>
